...
    var isSearchInProgress = false
    var errorMessage = ""
    var queryParam = ""
  
    override func viewDidLoad() {
        super.viewDidLoad()
        self.eventsListTableView.accessibilityIdentifier = "EventsTableView"
        self.searchController.searchResultsUpdater = self
        self.searchController.obscuresBackgroundDuringPresentation = false
        self.searchController.searchBar.placeholder = "Search Events (Min 3 chars)"
        navigationItem.searchController = searchController
        self.definesPresentationContext = true
        self.eventsListTableView.dataSource = self
        self.eventsListTableView.delegate = self
        self.title = "Seat Geek Events"
        self.searchController.searchBar.text = "Soccer"
...
